# opentelemetry-python-contrib

./: repro.py  tox.ini
authextension/gcp/: README.rst  pyproject.toml
authextension/gcp/src/opentelemetry/auth/gcp/: __init__.py
credential_provider/gcp/: README.rst  pyproject.toml
credential_provider/gcp/src/opentelemetry/credentials/gcp/: __init__.py  version.py
exportercustomizer/gcp/: README.rst  pyproject.toml
exportercustomizer/gcp/src/opentelemetry/auth/gcp/: __init__.py
instrumentation-genai/opentelemetry-instrumentation-google-genai/: CHANGELOG.md
instrumentation-genai/opentelemetry-instrumentation-google-genai/src/opentelemetry/instrumentation/google_genai/: generate_content.py  instrumentor.py  tool_call_wrapper.py
instrumentation-genai/opentelemetry-instrumentation-google-genai/tests/generate_content/: test_tool_call_instrumentation.py
instrumentation-genai/opentelemetry-instrumentation-google-genai/tests/utils/: test_tool_call_wrapper.py
instrumentation-genai/opentelemetry-instrumentation-vertexai/: pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-vertexai/src/opentelemetry/instrumentation/vertexai/: __init__.py  patch.py
instrumentation/opentelemetry-instrumentation-asyncio/: test-requirements.txt
opentelemetry-distro/src/opentelemetry/distro/: __init__.py
opentelemetry-instrumentation/src/opentelemetry/instrumentation/: _semconv.py  environment_variables.py
opentelemetry-instrumentation/src/opentelemetry/instrumentation/auto_instrumentation/: __init__.py  _load.py
util/opentelemetry-util-genai/: CHANGELOG.md
util/opentelemetry-util-genai/src/opentelemetry/util/genai/: _inference_invocation.py  _invocation.py  _tool_invocation.py  handler.py  utils.py
util/opentelemetry-util-genai/tests/: test_utils.py  test_utils_events.py  test_workflow_invocation.py
